--- a/HTML Y CCS/CSS/Grid.css
+++ b/HTML Y CCS/CSS/Grid.css
@@ -3,22 +3,36 @@ body{
 }
 
 .grid {
-    display: grid;
-    grid-template-columns: [] ;
-    grid-template-rows: [row-1-inicio] 58px [row-2-inicio] 50px;
-}
 
-.element {
-    background-color: aqua;
-    border: solid rgba(0, 0, 0);
-   border-radius: 8px;
-}
+    display: grid;
+    grid-template-areas:"header header" 
+                        "content sidebar"
+                        "footer footer";
+    grid-template-rows: 150px 1fr 100px;
+    grid-template-columns: 1fr 200px;
+    grid-auto-rows: 40px;
+    grid-auto-flow: row;
+    justify-items: stretch;
+    align-items: center;
+     
+ }
+
+ .red {
+     background-color: red;
+
+ }
+
+ .item {
+    justify-self: center; /*eje horizontal*/ 
+    align-self:center; /*eje vertical */
+
+ }
 
 .header {
-    grid-column: 1/6;
-    grid-row: 1/3;
+    grid-row: row-inicio / row-fin 3 ;
+    grid-column: col-inicio / col-fin 3 ;
+    
 }
-
 
 /* display: grid;
     grid-template-columns: 1fr 2fr 3fr;
@@ -32,3 +46,8 @@ body{
     grid-template-columns: 30px repeat(3, 1fr) 15px;
     grid-row-gap: 8px;
     grid-gap: 8px 8px; */
+
+    /* display:grid;
+    grid-template-columns: repeat(3, [col-inicio] 1fr [col-fin]);
+    grid-template-rows: repeat(2, [row-inicio] 50px [row-fin]);   
+    grid-gap: 15px; */
